# SNN-Data-Converter

./: CMakeLists.txt  README.md
src/: main.cpp
